--- a/compose.yaml
+++ b/compose.yaml
@@ -11,25 +11,16 @@ x-app:
 networks:
   seafile-net:
 services:
-  kolibri:
-    #image: koenswings/kolibri:1.0-0.15.5-dev
-    image: koenswings/kolibri:latest_dev
-    #restart: unless-stopped
-    restart: never
-    pull_policy: never
-    volumes:
-      - ./data:/root/.kolibri
-    ports:
-      - ${port}:8080
   db:
     image: mariadb:10.11
     container_name: seafile-mysql
     environment:
-      - MYSQL_ROOT_PASSWORD=db_dev  # Required, set the root's password of MySQL service.
+      - MYSQL_ROOT_PASSWORD=db_dev               # Required, set the root's password of MySQL service.
       - MYSQL_LOG_CONSOLE=true
       - MARIADB_AUTO_UPGRADE=1
     volumes:
-      - /opt/seafile-mysql/db:/var/lib/mysql  # Required, specifies the path to MySQL data persistent store.
+      #- /opt/seafile-mysql/db:/var/lib/mysql    # Required, specifies the path to MySQL data persistent store.
+      - ./data:/var/lib/mysql                    # Required, specifies the path to MySQL data persistent store.
     networks:
       - seafile-net
   memcached:
@@ -49,15 +40,15 @@ services:
       - ${port}:80
 #     - 443:443  # If https is enabled, cancel the comment.
     volumes:
-      - /opt/seafile-data:/shared   # Required, specifies the path to Seafile data persistent store.
-      #- ./data:/root/.kolibri
+      #- /opt/seafile-data:/shared               # Required, specifies the path to Seafile data persistent store.
+      - ./data:/shared                           # Required, specifies the path to Seafile data persistent store.
     environment:
       - DB_HOST=db
-      - DB_ROOT_PASSWD=db_dev  # Required, the value should be root's password of MySQL service.
-      - TIME_ZONE=Etc/UTC  # Optional, default is UTC. Should be uncomment and set to your local time zone.
-      - SEAFILE_ADMIN_EMAIL=me@example.com # Specifies Seafile admin user, default is 'me@example.com'.
-      - SEAFILE_ADMIN_PASSWORD=asecret     # Specifies Seafile admin password, default is 'asecret'.
-      - SEAFILE_SERVER_LETSENCRYPT=false   # Whether to use https or not.
+      - DB_ROOT_PASSWD=db_dev                    # Required, the value should be root's password of MySQL service.
+      - TIME_ZONE=Etc/UTC                        # Optional, default is UTC. Should be uncomment and set to your local time zone.
+      - SEAFILE_ADMIN_EMAIL=koen@swings.be       # Specifies Seafile admin user, default is 'me@example.com'.
+      - SEAFILE_ADMIN_PASSWORD=admin911!         # Specifies Seafile admin password, default is 'asecret'.
+      - SEAFILE_SERVER_LETSENCRYPT=false         # Whether to use https or not.
       - SEAFILE_SERVER_HOSTNAME=docs.seafile.com # Specifies your host name if https is enabled.
     depends_on:
       - db
